[Frontend] Fix unread message area collapsing icon
Formerly, the icon would be merely turned instead of being replaced by
its proper reverse version (as is done by the user list collapser).

Introduced in commit 2d1656887c10d4a5a049e9be3c56658c631870f1 (along
with the feature itself).

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -1008,6 +1008,10 @@ h2.sidebar-unread .unread-size {
 h2.sidebar-unread .button-icon-cover {
   padding: 1px;
 }
+.unread-collapse-all:not(.unread-collapsed) img.unread-collapsed,
+.unread-collapse-all.unread-collapsed img:not(.unread-collapsed) {
+  display: none;
+}
 .sidebar-unread-content {
   padding: 0 3px 3px;
   max-height: 50%;
